# bbb_info_app

./: .gitignore  CMakeLists.txt  README.md  attendee_lib.cpp  bbb_info_app_zh_TW.ts  data.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meeting_lib.cpp  server_lib.cpp  xml_reader_lib.cpp
.cache/clangd/index/: main.cpp.A2C91901C29F078B.idx  mainwindow.cpp.84218FFEF475A647.idx  mainwindow.h.E35785A775E2A23A.idx
cmake/: deps.cmake  lib.cmake
lib/data/: CMakeLists.txt  attendee_lib.cpp  data.h  meeting_lib.cpp  server_lib.cpp  xml_reader_lib.cpp
lib/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
